Make links absolute

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
     
     <!-- Style sheet -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     
 </head>
 
@@ -31,7 +31,7 @@
         <div class="container" id="content">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="img/UASS_Logo_Big.PNG" width="100%" />
+                    <img src="/img/UASS_Logo_Big.PNG" width="100%" />
                 </div>
                 <div class="col-md-6">
                     <p>
@@ -41,20 +41,20 @@
                     and Mines. UASS is tasked with upgrading two existing UAS platforms: the
                     Lockheed Martin Stalker (a fixed wing UAS) and the DJI S900 (a multirotor
                     UAS). These systems are being upgraded for use by 
-                    <a href="acuasi.alaska.edu">ACUASI</a> in their field operations.
+                    <a href="http://acuasi.alaska.edu">ACUASI</a> in their field operations.
                     </p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <figure>
-                        <img src = "img/LM_Stalker.jpg" width="100%" />
+                        <img src = "/img/LM_Stalker.jpg" width="100%" />
                         <figcaption style="text-align:center">Lockheed Martin Stalker</figcaption>
                     </figure>
                 </div>
                 <div class="col-md-6">
                     <figure>
-                        <img src = "img/DJI_S900.jpg" width="100%" />
+                        <img src = "/img/DJI_S900.jpg" width="100%" />
                         <figcaption style="text-align:center">DJI S900</figcaption>
                     </figure>
                 </div>
@@ -62,7 +62,7 @@
             <div class="row">
                 <div class="col-md-12 center-box">
                     <figure>
-                        <img src = "img/Saturday_Outing.jpg" />
+                        <img src = "/img/Saturday_Outing.jpg" />
                         <figcaption style="text-align:center">UASS Team Flying in the Snow</figcaption>
                     </figure>
                 </div>
