--- a/students.html
+++ b/students.html
@@ -17,7 +17,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     
     <!-- Style sheet -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
 </head>
 
 <body>
@@ -35,7 +35,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="/img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -61,7 +61,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="/img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -76,7 +76,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/PatrickD.jpg"  height="300.9" width="232.2" style="border:2px solid black" />
+                            <img src="/img/students/PatrickD.jpg"  height="300.9" width="232.2" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -91,7 +91,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/RykerD.jpg"  height="250" width="175.75" style="border:2px solid black" />
+                            <img src="/img/students/RykerD.jpg"  height="250" width="175.75" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -106,7 +106,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="/img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -136,7 +136,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="/img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -151,7 +151,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="/img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -178,7 +178,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/NathanG.jpg"  height="240" width="180" style="border:2px solid black" />
+                            <img src="/img/students/NathanG.jpg"  height="240" width="180" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -199,7 +199,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/SarahH.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="/img/students/SarahH.jpg"  height="270" width="222" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -219,7 +219,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/NathanK.jpg"  height="250" width="187.5" style="border:2px solid black" />
+                            <img src="/img/students/NathanK.jpg"  height="250" width="187.5" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -234,7 +234,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                                <img src="img/students/ZachK.jpg"  height="240" width="160" style="border:2px solid black" />
+                                <img src="/img/students/ZachK.jpg"  height="240" width="160" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -264,7 +264,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/ShoaR.jpg"  height="256.8" width="167.8" style="border:2px solid black" />
+                            <img src="/img/students/ShoaR.jpg"  height="256.8" width="167.8" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -291,7 +291,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                                <img src="img/students/PatrickS.jpg"  height="266.083" width="193.5" style="border:2px solid black" />
+                                <img src="/img/students/PatrickS.jpg"  height="266.083" width="193.5" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -319,7 +319,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="/img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -334,7 +334,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/BharathV.jpg"  height="224" width="192.5" style="border:2px solid black" />
+                            <img src="/img/students/BharathV.jpg"  height="224" width="192.5" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
