--- a/media/flyinginfield.html
+++ b/media/flyinginfield.html
@@ -17,7 +17,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
     
     <!-- Style sheet -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     
 </head>
 
