--- a/navbar.html
+++ b/navbar.html
@@ -10,6 +10,7 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Documentation<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/docs/Proposal_Final.pdf">Proposal</a></li>
+                        <li><a href="/docs/CDR.pdf">CDR</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
