--- a/media/flyinginfield.html
+++ b/media/flyinginfield.html
@@ -30,10 +30,11 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    
+                <div class="col-md-8">
+                    <iframe width="420" height="315" src="https://www.youtube.com/embed/-ianzPQQ4JA" frameborder="0" allowfullscreen></iframe>
+                    <figcaption>Disclaimer: This outing was hobby flying and not affiliated with any organization.</figcaption>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
                     
                 </div>
             </div>
