--- a/media/flyinginfield.html
+++ b/media/flyinginfield.html
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col-md-8 center-box">
                     <iframe width="420" height="315" src="https://www.youtube.com/embed/-ianzPQQ4JA" frameborder="0" allowfullscreen></iframe>
-                    <figcaption><i>Disclaimer: This outing was hobby flying and not affiliated with any organization.</i></figcaption>
+                    <figcaption style="text-align:center"><i>Disclaimer: This outing was hobby flying and not affiliated with any organization.</i></figcaption>
                 </div>
                 <div class="col-md-4">
                     
