--- a/media/flyinginfield.html
+++ b/media/flyinginfield.html
@@ -31,11 +31,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 center-box">
-                    <iframe width="420" height="315" src="https://www.youtube.com/embed/-ianzPQQ4JA" frameborder="0" allowfullscreen></iframe>
+                    <div class="embed-responsive embed-responsive-16by9">
+                      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-ianzPQQ4JA"></iframe>
+                    </div>
                     <figcaption style="text-align:center"><i>Disclaimer: This outing was hobby flying and not affiliated with any organization.</i></figcaption>
                 </div>
                 <div class="col-md-4">
-                    
                 </div>
             </div>
         </div>
