--- a/media/flyinginfield.html
+++ b/media/flyinginfield.html
@@ -30,11 +30,11 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-md-8 center-box">
+                <div class="col-md-8">
                     <div class="embed-responsive embed-responsive-16by9">
-                      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-ianzPQQ4JA" width="100%"></iframe>
+                      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-ianzPQQ4JA"></iframe>
                     </div>
-                    <!-- <figcaption style="text-align:center"><i>Disclaimer: This outing was hobby flying and not affiliated with any organization.</i></figcaption> -->
+                    <figcaption style="text-align:center"><i>Disclaimer: This outing was hobby flying and not affiliated with any organization.</i></figcaption>
                 </div>
                 <div class="col-md-4">
                 </div>
