Added testing page

--- a/media/testing.html
+++ b/media/testing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>UASS - Design & Fabrication</title>
+    <title>UASS - Testing</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -31,11 +31,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src = "/img/media/MockUpDesign.jpg" width="100%" />
-                    <figcaption style="text-align:center">Designing Mock-Up UAS's</figcaption>
+                    <img src = "/img/media/MotorTesting_1.jpg" width="100%" />
                 </div>
                 <div class="col-md-6">
-                    
+                    <img src = "/img/media/MotorTesting_2.jpg" width="100%" />
                 </div>
             </div>
         </div>
