--- a/navbar.html
+++ b/navbar.html
@@ -17,6 +17,7 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Media<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/media/designandfab.html">Design & Fabrication</a></li>
+                        <li><a href="/media/testing.html">Testing</a></li>
                         <li><a href="/media/flyinginfield.html">Flying in the Field</a></li>
                     </ul>
                 </li>
