--- a/media/testing.html
+++ b/media/testing.html
@@ -29,6 +29,7 @@
     </script>
     <section>
         <div class="container">
+            <h1>Testing the Motors</h1>
             <div class="row">
                 <div class="col-md-6">
                     <img src = "/img/media/testing/MotorTesting_1.jpg" width="100%" />
