Added Shoa's video

--- a/media/flyinginfield.html
+++ b/media/flyinginfield.html
@@ -35,6 +35,9 @@
                       <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-ianzPQQ4JA"></iframe>
                     </div>
                     <figcaption style="text-align:center"><i>Disclaimer: This outing was hobby flying and not affiliated with any organization.</i></figcaption>-->
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cNRqe2HJ0NQ"></iframe>
+                    </div>
                 </div>
                 <div class="col-md-4">
                 </div>
