Added text to flyinginfield.html

--- a/media/flyinginfield.html
+++ b/media/flyinginfield.html
@@ -29,6 +29,7 @@
     </script>
     <section>
         <div class="container">
+            <h1>Flying at Goldstream Soccer Field (11/14/2015)</h1><br />
             <div class="row">
                 <div class="col-md-8">
                     <!--<div class="embed-responsive embed-responsive-16by9">
@@ -36,10 +37,19 @@
                     </div>
                     <figcaption style="text-align:center"><i>Disclaimer: This outing was hobby flying and not affiliated with any organization.</i></figcaption>-->
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cNRqe2HJ0NQ"></iframe>
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cNRqe2HJ0NQ" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-md-4">
+                    <br />
+                    <p>
+                        This was our first outing flying UAS's in an official UASS capacity. Our ground station crew gained valuable experience in using Mission Planner
+                        to operate a quadcopter, and we experienced what it was like to fly in the cold Alaska winter.
+                        <br /><br />
+                        The cold was followed by a hot meal at a nearby diner; it was a great opportunity for the team to get more familiar with one another. All in all,
+                        the outing was a huge success, and is a great example of what makes this class so fun!
+                    </p>
+                    
                 </div>
             </div>
         </div>
