Added explanation to design and fab.

--- a/media/designandfab.html
+++ b/media/designandfab.html
@@ -30,12 +30,20 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-8">
                     <img src = "/img/media/MockUpDesign.jpg" width="100%" />
                     <figcaption style="text-align:center">Designing Mock-Up UAS's</figcaption>
                 </div>
-                <div class="col-md-6">
-                    
+                <div class="col-md-4">
+                </br>
+                <p>
+                    Designing the layout for the S900 and the Stalker required finding places where everything fit together. The first step was
+                    to compile all of the parts together. Since not all of the parts were in yet, we made some mock-up parts out of foam. This was
+                    useful for showing a rough layout for the various subsystems.
+                    <br /><br />
+                    A foam CNC machine was very helpful in expediting making these mock-up parts. This CNC machine was also used by Patrick Dewane
+                    to make custom airfoils for the Stalker.
+                </p>  
                 </div>
             </div>
         </div>
