--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         $( "#navbar" ).load("/navbar.html" );
     </script>
     <section>
-        <div class="container" id="content">
+        <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <img src="/img/UASS_Logo_Big.PNG" width="100%" />
@@ -62,7 +62,7 @@
             <div class="row">
                 <div class="col-md-12 center-box">
                     <figure>
-                        <img src = "/img/Saturday_Outing.jpg" />
+                        <img src = "/img/Saturday_Outing.jpg" width="100%" />
                         <figcaption style="text-align:center">UASS Team Flying in the Snow</figcaption>
                     </figure>
                 </div>
