Docs now open in new tab

--- a/navbar.html
+++ b/navbar.html
@@ -9,8 +9,8 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Documentation<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/docs/Proposal_Final.pdf">Proposal</a></li>
-                        <li><a href="/docs/CDR.pdf">CDR</a></li>
+                        <li><a href="/docs/Proposal_Final.pdf" target="_blank">Proposal</a></li>
+                        <li><a href="/docs/CDR.pdf" target="_blank">CDR</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
