Added section for CNC hotwire.

--- a/media/designandfab.html
+++ b/media/designandfab.html
@@ -29,6 +29,7 @@
     </script>
     <section>
         <div class="container">
+            <h1>Mock-Up Design</h1>
             <div class="row">
                 <div class="col-md-8">
                     <img src = "/img/media/MockUpDesign.jpg" width="100%" />
@@ -43,6 +44,25 @@
                     <br /><br />
                     A foam CNC machine was very helpful in expediting making these mock-up parts. This CNC machine was also used by Patrick Dewane
                     to make custom airfoils for the Stalker.
+                </p>  
+                </div>
+            </div>
+            <h2>CNC Hotwire</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src = "/img/media/CNC_Hotwire_1.jpg" width="100%" />
+                    <figcaption style="text-align:center">Cutting a Custom Airfoil</figcaption>
+                </div>
+                <div class="col-md-6">
+                </br>
+                <p>
+                    Parts for the Stalker are hard to come by, so if any break we could be in big trouble. To try and solve this problem, Patrick Dewane
+                    wanted to find out if he could make the parts himself. Through his research, Patrick found that the air brake on the Stalker is a standard
+                    design, the NACA 64-008A, so he set out to make one with a CNC foam cutting machine and an STL file he got from an airfoil database.
+                    <br /><br />
+                    After hours of mucking around with the user-unfriendly control software and having to edit the gcode himself, he was finally able to cut
+                    out the airfoil. He then laid fiberglass on the airfoil, and after a little more paint and polish he had made a professional quality
+                    air brake.
                 </p>  
                 </div>
             </div>
