--- a/media/testing.html
+++ b/media/testing.html
@@ -38,6 +38,17 @@
                     <img src = "/img/media/testing/MotorTesting_2.jpg" width="100%" />
                 </div>
             </div>
+            <!-- <div class="row">
+                <div class="col-md-6">
+                    <p>
+                        When designing a UAS, it is important to know what kind of current draw to expect from your motors.
+                        The original motor for the Stalker is proprietary with sparse and hard to find publicly available information,
+                        so we had to test its motor ourselves. 
+                    </p>
+                </div>
+                <div class="col-md-6">
+                </div>
+            </div> -->
         </div>
     </section>
 </body>
