Propulsion testing pictures

--- a/media/designandfab.html
+++ b/media/designandfab.html
@@ -32,7 +32,7 @@
             <h1>Mock-Up Design</h1>
             <div class="row">
                 <div class="col-md-8">
-                    <img src = "/img/media/MockUpDesign.jpg" width="100%" />
+                    <img src = "/img/media/designandfab/MockUpDesign.jpg" width="100%" />
                     <figcaption style="text-align:center">Designing Mock-Up UAS's</figcaption>
                 </div>
                 <div class="col-md-4">
@@ -50,7 +50,7 @@
             <h1>CNC Hotwire</h1>
             <div class="row">
                 <div class="col-md-6">
-                    <img src = "/img/media/CNC_Hotwire_1.jpg" width="100%" />
+                    <img src = "/img/media/designandfab/CNC_Hotwire_1.jpg" width="100%" />
                     <figcaption style="text-align:center">Cutting a Custom Airfoil</figcaption>
                 </div>
                 <div class="col-md-6">
@@ -64,6 +64,17 @@
                     out the airfoil. He then laid fiberglass on the airfoil, and after a little more paint and polish he had made a professional quality
                     air brake.
                 </p>  
+                </div>
+            </div>
+            <h1>Propulsion Build & Test Session 11/18/2015</h1>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src = "/img/media/designandfab/BuildSession1.jpg" width="100%" />
+                    <figcaption style="text-align:center"></figcaption>
+                </div>
+                <div class="col-md-6">
+                    <img src = "/img/media/designandfab/BuildSession2.jpg" width="100%" />
+                    <figcaption style="text-align:center"></figcaption>
                 </div>
             </div>
         </div>
