Added picture of finished air brake

--- a/media/designandfab.html
+++ b/media/designandfab.html
@@ -67,6 +67,12 @@
                 </p>  
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src = "/img/media/designandfab/Custom_AirBrake.jpg" width="100%" />
+                    <figcaption style="text-align:center">The Finished Air Brake</figcaption>          
+                </div>
+            </div>
             <br />
             <h1>Propulsion Build & Test Session 11/18/2015</h1>
             <div class="row">
