--- a/media/testing.html
+++ b/media/testing.html
@@ -3,8 +3,9 @@
 
 <head>
     <title>UASS - Testing</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8" />
+    <meta name="author" content="Ryker Dial" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
     
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
