More content to testing.

--- a/media/testing.html
+++ b/media/testing.html
@@ -30,26 +30,27 @@
     </script>
     <section>
         <div class="container">
-            <h1>Testing the Motors</h1>
+            <h1>Testing the Stalker</h1>
             <div class="row">
                 <div class="col-md-6">
                     <img src = "/img/media/testing/MotorTesting_1.jpg" width="100%" />
                 </div>
                 <div class="col-md-6">
-                    <img src = "/img/media/testing/MotorTesting_2.jpg" width="100%" />
-                </div>
-            </div>
-            <!-- <div class="row">
-                <div class="col-md-6">
                     <p>
-                        When designing a UAS, it is important to know what kind of current draw to expect from your motors.
-                        The original motor for the Stalker is proprietary with sparse and hard to find publicly available information,
-                        so we had to test its motor ourselves. 
+                        The original motor for the Stalker is proprietary with no markings and sparse, hard to find publicly available
+                        information, so we had to test the motor ourselves. This was important not only to determine the current draw
+                        of the motor, but to determine if the motor even worked at all. Imagine building an entire system around a motor
+                        that didn't even work!
                     </p>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src = "/img/media/testing/MotorTesting_2.jpg" width="100%" />
+                </div>  
                 <div class="col-md-6">
                 </div>
-            </div> -->
+            </div>
         </div>
     </section>
 </body>
