--- a/navbar.html
+++ b/navbar.html
@@ -11,6 +11,8 @@
                     <ul class="dropdown-menu">
                         <li><a href="/docs/Proposal_Final.pdf" target="_blank">Proposal</a></li>
                         <li><a href="/docs/CDR.pdf" target="_blank">CDR</a></li>
+                        <li><a href="#" target=>EAP</a></li>
+                        <li><a href="#" target=>FMEA</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
