Added text to 3d printing section

--- a/media/designandfab.html
+++ b/media/designandfab.html
@@ -94,11 +94,18 @@
             <div class="row">
                 <div class="col-md-6">
                     <img src = "/img/media/designandfab/3D_Print_1.jpg" width="100%" />
-                    <figcaption style="text-align:center"></figcaption>
+                    <figcaption style="text-align:center">Printing a Mold for a Fiberglass Dome</figcaption>
                 </div>
                 <div class="col-md-6">
                     <img src = "/img/media/designandfab/3D_Print_2.jpg" width="100%" />
                     <figcaption style="text-align:center"></figcaption>
+                    <p>
+                        3D printing is a very useful tool for quickly prototyping parts. In our initial prototyping we printed
+                        our parts in PLA, which is cheap and widely available. Though we wanted our final parts to be made of
+                        sturdier material, PLA is good for basic testing and making sure that the dimensions for parts are correct:
+                        It would sure suck if we ordered expensive, high quality parts, only to find that some measurement was 
+                        slightly off, making the part useless.
+                    </p>
                 </div>
             </div>
             <br />
