rearrange text and pics

--- a/media/designandfab.html
+++ b/media/designandfab.html
@@ -57,6 +57,9 @@
                     <figcaption style="text-align:center">Cutting a Custom Airfoil</figcaption>
                 </div>
                 <div class="col-md-6">
+                    <img src = "/img/media/designandfab/Custom_AirBrake.jpg" width="100%" />
+                    <figcaption style="text-align:center">The Finished Air Brake</figcaption>          
+                </div>
                 </br>
                 <p>
                     Parts for the Stalker are hard to come by, so if any break we could be in big trouble. To try and solve this problem, Patrick Dewane
@@ -69,12 +72,12 @@
                 </p>  
                 </div>
             </div>
-            <div class="row">
+<!--             <div class="row">
                 <div class="col-md-6">
                     <img src = "/img/media/designandfab/Custom_AirBrake.jpg" width="100%" />
                     <figcaption style="text-align:center">The Finished Air Brake</figcaption>          
                 </div>
-            </div>
+            </div> -->
             <br />
             
             <h1>Propulsion Build & Test Session 11/18/2015</h1>
@@ -99,6 +102,7 @@
                 <div class="col-md-6">
                     <img src = "/img/media/designandfab/3D_Print_2.jpg" width="100%" />
                     <figcaption style="text-align:center"></figcaption>
+                    <br />
                     <p>
                         3D printing is a very useful tool for quickly prototyping parts. In our initial prototyping we printed
                         our parts in PLA, which is cheap and widely available. Though we wanted our final parts to be made of
