--- a/media/designandfab.html
+++ b/media/designandfab.html
@@ -57,26 +57,24 @@
                     <figcaption style="text-align:center">Cutting a Custom Airfoil</figcaption>
                 </div>
                 <div class="col-md-6">
-                    <img src = "/img/media/designandfab/Custom_AirBrake.jpg" width="100%" />
-                    <figcaption style="text-align:center">The Finished Air Brake</figcaption>          
+                    </br>
+                    <p>
+                        Parts for the Stalker are hard to come by, so if any break we could be in big trouble. To try and solve this problem, Patrick Dewane
+                        wanted to find out if he could make the parts himself. Through his research, Patrick found that the air brake on the Stalker is a standard
+                        design, the NACA 64-008A, so he set out to make one with a CNC foam cutting machine and an STL file he got from an airfoil database.
+                        <br /><br />
+                        After hours of mucking around with the user-unfriendly control software and having to edit the gcode himself, he was finally able to cut
+                        out the airfoil. He then laid fiberglass on the airfoil, and after a little more paint and polish he had made a professional quality
+                        air brake.
+                    </p>  
                 </div>
-                </br>
-                <p>
-                    Parts for the Stalker are hard to come by, so if any break we could be in big trouble. To try and solve this problem, Patrick Dewane
-                    wanted to find out if he could make the parts himself. Through his research, Patrick found that the air brake on the Stalker is a standard
-                    design, the NACA 64-008A, so he set out to make one with a CNC foam cutting machine and an STL file he got from an airfoil database.
-                    <br /><br />
-                    After hours of mucking around with the user-unfriendly control software and having to edit the gcode himself, he was finally able to cut
-                    out the airfoil. He then laid fiberglass on the airfoil, and after a little more paint and polish he had made a professional quality
-                    air brake.
-                </p>  
             </div>
-<!--             <div class="row">
+            <div class="row">
                 <div class="col-md-6">
                     <img src = "/img/media/designandfab/Custom_AirBrake.jpg" width="100%" />
                     <figcaption style="text-align:center">The Finished Air Brake</figcaption>          
                 </div>
-            </div> -->
+            </div>
             <br />
             
             <h1>Propulsion Build & Test Session 11/18/2015</h1>
