--- a/students.html
+++ b/students.html
@@ -107,7 +107,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="/img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="/img/students/DaltonE.jpg"  height="258" width="145" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -117,21 +117,6 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="panel panel-default">
-                <div class="panel-heading">Paul Gill</div>
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-md-4 center-box">
-                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
-                        </div>
-                        <div class="col-md-8">
-                            <p>
-                            <br />
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>-->
             <div class="panel panel-default">
                 <div class="panel-heading">Cody Gossel</div>
                 <div class="panel-body">
@@ -320,7 +305,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="/img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="/img/students/DanielT.jpg"  height="266" width="196" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
