--- a/students.html
+++ b/students.html
@@ -36,7 +36,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="/img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="/img/students/ClaytonA.jpg"  height="267" width="161" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -137,7 +137,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="/img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="/img/students/LoganG.jpg"  height="257" width="141" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
