--- a/students.html
+++ b/students.html
@@ -96,6 +96,13 @@
                         </div>
                         <div class="col-md-8">
                             <p>
+                                Ryker is an undergraduate student pursuing a degree in Computer Engineering. He serves as the
+                                web master for UASS, making sure that the various aspects of the class are highlighted to 
+                                increase interest in the class for future prospective students.
+                                <br /><br />
+                                Ryker is very interested in robotics. He loves playing around with Arduino and web-based ground
+                                robots, and is involved in the ITEST telepresence robotics research project at UAF. He has a
+                                technology blog that can be found <a href="https://rainforestrobots.wordpress.com/">here</a>.
                             <br />
                             </p>
                         </div>
