--- a/students.html
+++ b/students.html
@@ -129,7 +129,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="/img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="/img/students/CodyG.jpg"  height="279" width="247" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
