--- a/media/testing.html
+++ b/media/testing.html
@@ -51,6 +51,18 @@
                 <div class="col-md-6">
                 </div>
             </div>
+            <br />
+            
+            <h1>Testing the S900</h1>
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9ox7e5ZdZds" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                </div>  
+            </div>       
         </div>
     </section>
 </body>
