--- a/students.html
+++ b/students.html
@@ -62,7 +62,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="/img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="/img/students/BrandonB.jpg"  height="292" width="237" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
