Added Stalker ice skating video

--- a/media/flyinginfield.html
+++ b/media/flyinginfield.html
@@ -53,6 +53,20 @@
                     
                 </div>
             </div>
+            <br />
+            <h1>UASS Systems Demonstration (12/19/2015)</h1><br />
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/usY-ui_hO3w" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <br />
+                    <p>
+                    </p>             
+                </div>
+            </div>
         </div>
     </section>
 </body>
