--- a/navbar.html
+++ b/navbar.html
@@ -6,7 +6,7 @@
         <div>
             <ul class="nav navbar-nav">
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/about.html"About</a></li>
+                <li><a href="/about.html">About</a></li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Documentation<span class="caret"></span></a>
                     <ul class="dropdown-menu">
