--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
     </script>
     <section>
         <div class="container">
+            <h1>Class Overview</h1>
             <div class="row">
                 <div class="col-md-6">
                     <p>
