Added video showing functionality of Stalker

--- a/media/PAR.html
+++ b/media/PAR.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>UASS - Flying in the Field</title>
+    <title>UASS - Performance Acceptance Review</title>
 	<meta charset="utf-8" />
     <meta name="author" content="Ryker Dial" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -30,26 +30,32 @@
     </script>
     <section>
         <div class="container">
-            <h1>Flying at Goldstream Soccer Field (11/14/2015)</h1><br />
+            <h1>Performance Acceptance Review (12/19/2015)</h1><br />
             <div class="row">
                 <div class="col-md-8">
-                    <!--<div class="embed-responsive embed-responsive-16by9">
-                      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-ianzPQQ4JA"></iframe>
-                    </div>
-                    <figcaption style="text-align:center"><i>Disclaimer: This outing was hobby flying and not affiliated with any organization.</i></figcaption>-->
+                    <figure>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/H3yAMgsn8RE" allowfullscreen></iframe>
+                        </div>
+                        <figcaption style="text-align:center">Demonstrating the Stalker System</figcaption>
+                    </figure>
+                </div>
+                <div class="col-md-4">
+                    <br />
+                    <p>
+                    </p>             
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cNRqe2HJ0NQ" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QarRwj0y5yA" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <br />
                     <p>
-                        This was our first outing flying UAS's in an official UASS capacity. Our ground station crew gained valuable experience in using Mission Planner
-                        to operate a quadcopter, and we experienced what it was like to fly in the cold Alaska winter.
-                        <br /><br />
-                        The cold was followed by a hot meal at a nearby diner; it was a great opportunity for the team to get more familiar with one another. All in all,
-                        the outing was a huge success, and is a great example of what makes this class so fun!
-                    </p>    
+                    </p>             
                 </div>
             </div>
         </div>
