--- a/navbar.html
+++ b/navbar.html
@@ -22,6 +22,7 @@
                         <li><a href="/media/designandfab.html">Design & Fabrication</a></li>
                         <li><a href="/media/testing.html">Testing</a></li>
                         <li><a href="/media/flyinginfield.html">Flying in the Field</a></li>
+                        <li><a href="/media/PAR.html">Performance Acceptance Review</a></li>
                     </ul>
                 </li>
                 <li><a href="/students.html">Students</a></li>
