Added User's guides

--- a/navbar.html
+++ b/navbar.html
@@ -14,6 +14,8 @@
                         <li><a href="/docs/CDR.pdf" target="_blank">CDR</a></li>
                         <li><a href="/docs/EAP.pdf" target=>EAP</a></li>
                         <li><a href="/docs/FMEA.pdf" target=>FMEA</a></li>
+                        <li><a href="/docs/S900_User_Manual.pdf" target=>S900 User Manual</a></li>
+                        <li><a href="/docs/Stalker_User_Manual.pdf" target=>Stalker User Manual</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
