New picture for Stalker.

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <div class="row">
                 <div class="col-md-6">
                     <figure>
-                        <img src = "/img/LM_Stalker.jpg" width="100%" />
-                        <figcaption style="text-align:center">Lockheed Martin Stalker</figcaption>
+                        <img src = "/img/UASS_Stalker.png" width="100%" />
+                        <figcaption style="text-align:center">UASS Stalker</figcaption>
                     </figure>
                 </div>
                 <div class="col-md-6">
