--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 </div>
                 <div class="col-md-6">
                     <figure>
-                        <img src = "/img/DJI_S900.jpg" width="100%" />
-                        <figcaption style="text-align:center">DJI S900</figcaption>
+                        <img src = "/img/UASS_S900.jpg" width="100%" />
+                        <figcaption style="text-align:center">UASS S900</figcaption>
                     </figure>
                 </div>
             </div>
