Better quality picture for S900

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="col-md-6">
                     <figure>
-                        <img src = "/img/UASS_S900.png" width="100%" />
+                        <img src = "/img/UASS_S900.jpg" width="100%" />
                         <figcaption style="text-align:center">UASS S900</figcaption>
                     </figure>
                 </div>
