Make all docs open in new tab :

--- a/navbar.html
+++ b/navbar.html
@@ -12,10 +12,10 @@
                     <ul class="dropdown-menu">
                         <li><a href="/docs/Proposal_Final.pdf" target="_blank">Proposal</a></li>
                         <li><a href="/docs/CDR.pdf" target="_blank">CDR</a></li>
-                        <li><a href="/docs/EAP.pdf" target=>EAP</a></li>
-                        <li><a href="/docs/FMEA.pdf" target=>FMEA</a></li>
-                        <li><a href="/docs/S900_User_Manual.pdf" target=>S900 User Manual</a></li>
-                        <li><a href="/docs/Stalker_User_Manual.pdf" target=>Stalker User Manual</a></li>
+                        <li><a href="/docs/EAP.pdf" target="_blank">EAP</a></li>
+                        <li><a href="/docs/FMEA.pdf" target="_blank">FMEA</a></li>
+                        <li><a href="/docs/S900_User_Manual.pdf" target="_blank">S900 User Manual</a></li>
+                        <li><a href="/docs/Stalker_User_Manual.pdf" target="_blank">Stalker User Manual</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
