--- a/students.html
+++ b/students.html
@@ -218,6 +218,14 @@
                         <div class="col-md-8">
                             <p>
                             <br />
+                            Nathan Kingsland was born in Fairbanks, Alaska to David and Valarie Kingsland, both of which are UAF 
+                            graduates. He has two younger brothers; Jonathan and Chris. After graduating high school in Seward, 
+                            Alaska he enlisted in the United States Navy. While proudly supporting OIF/OEF missions overseas, he 
+                            gained valuable knowledge and experience on aircraft instrumentation and electronic systems.
+
+                            Upon completion of his enlistment he chose to come back to Alaska and pursue an electrical engineering 
+                            degree. He is a member of the Alaska Native Science and Engineering Program (ANSEP) and IEEE. Cool 
+                            Runnings is his favorite movie.
                             </p>
                         </div>
                     </div>
